--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest   # образ для сборки
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
